[package]
name = "ternyte"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = "symbols" 
debug = false
panic = "abort"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-ar"

[dependencies]
hecs = "0.11.0"
sdl3-sys = {
    version = "0.6.5",
    features = [
        "build-from-source", 
        "link-static",
        "sdl-lean-and-mean",
        "no-default-subsystems",
        "sdl-video",
        "sdl-render",
    ]
}
sdl3-ttf-sys = {
    version = "0.6.0",
    features = [
        "build-static-vendored",
    ]
}

[lints.clippy]
needless_return = "allow"
single_match = "allow"
upper_case_acronyms = "allow"
