[package]
name = "ternyte"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 0

[profile.release]
# Performance
opt-level = 3
codegen-units = 1
lto = "fat"

# Smaller binary
strip = true
debug = false
panic = "abort"

[dependencies]
sdl3 = {version = "0.17.3", features =  ["unsafe_textures", "ttf", "image"]}

[lints.clippy]
needless_return = "allow"
single_match = "allow"
upper_case_acronyms = "allow"
